<resources>
    <!--activity-->
    <string name="app_name">Car Maintenance</string>


    <!--main-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_action_vehicles">Vehicles</string>
    <string name="nav_action_refueling">Refueling</string>
    <string name="nav_action_fuel_price">Fuel price</string>
    <string name="nav_action_reports">Reports</string>
    <string name="nav_action_settings">Settings</string>
    <string name="nav_action_parking">Parking</string>
    <string name="nav_action_service">Service</string>


    <!--DateUtils-->
    <string name="formatter_date">dd-MM-yy</string>

    <!--pref currency-->
    <string name="hryvnia" translatable="false">UAH|₴</string>
    <string name="dollar" translatable="false">USD|$</string>
    <string name="euro" translatable="false">EUR|€</string>
    <string name="ruble" translatable="false">RUB|₽</string>

    <!--pref volume units-->
    <string name="litre">l</string>
    <string name="gallon">gal</string>

    <!--pref distance units-->
    <string name="kilometer">km</string>
    <string name="mile">mi</string>

    <!--!!!-->
    <string name="title_activity_edit_vehicle">EditVehicleActivity</string>
    <string name="title_activity_edit_maintenance">EditMaintenanceActivity</string>

    <!--edit refueling-->
    <string name="description_edit_refueling_date">Refueling date</string>
    <string name="description_edit_refueling_odometer">Refueling odometer</string>
    <string name="description_edit_refueling_add_fuel_brand">Add fuel brand</string>
    <string name="description_edit_refueling_gas_station">Gas station</string>
    <string name="description_edit_refueling_add_gas_station">Add gas station</string>
    <string name="description_edit_refueling_fuel_volume">Fuel volume</string>
    <string name="description_edit_refueling_fuel_brand">Fuel brand</string>
    <string name="description_edit_refueling_fuel_balance">Fuel balance</string>
    <string name="hint_edit_refueling_odometer">Odometer</string>
    <string name="hint_edit_refueling_distance">Distance</string>
    <string name="hint_edit_refueling_price">Price</string>
    <string name="hint_edit_refueling_volume">Volume</string>
    <string name="hint_edit_refueling_price_unit">Price unit</string>
    <string name="hint_edit_refueling_fuel_balance">Fuel balance</string>
    <string name="error_edit_refueling_write_in">Write in the value</string>
    <string name="error_edit_refueling_incorrect_value">Incorrect the value</string>

    <!--add info dialog-->
    <string name="title_add_info_dialog_gas_station">Enter gas station name</string>
    <string name="title_add_info_dialog_fuel_brand">Enter fuel brand name</string>

    <!--fuel price api-->
    <string name="ukraine">30|Ukraine</string>
    <string name="vinnytsia">27|Vinnytsia</string>
    <string name="volyn">28|Volyn</string>
    <string name="dnipropetrovsk">04|Dnipropetrovsk</string>
    <string name="donetsk">05|Donetsk</string>
    <string name="zhytomyr">06|Zhytomyr</string>
    <string name="zakarpattia">07|Zakarpattia</string>
    <string name="zaporizhzhia">08|Zaporizhzhia</string>
    <string name="ivano_frankivsk">09|Ivano-Frankivsk</string>
    <string name="kyiv">11|Kyiv</string>
    <string name="kirovohrad">12|Kirovohrad</string>
    <string name="autonomous_republic_of_crimea">10|Autonomous Republic of Crimea</string>
    <string name="luhansk">13|Luhansk</string>
    <string name="lviv">14|Lviv</string>
    <string name="mykolaiv">15|Mykolaiv</string>
    <string name="odesa">16|Odesa</string>
    <string name="poltava">17|Poltava</string>
    <string name="rivne">18|Rivne</string>
    <string name="sumy">19|Sumy</string>
    <string name="ternopil">20|Ternopil</string>
    <string name="kharkiv">21|Kharkiv</string>
    <string name="kherson">22|Kherson</string>
    <string name="khmelnytskyi">23|Khmelnytskyi</string>
    <string name="cherkasy">24|Cherkasy</string>
    <string name="chernihiv">25|Chernihiv</string>
    <string name="chernivtsi">26|Chernivtsi</string>

    <string name="a80">A80|A-80</string>
    <string name="a92">A92|A-92</string>
    <string name="a95">A95|A-95</string>
    <string name="dt">DT|Diesel</string>
    <string name="a95e">A95E|A-95E</string>
    <string name="gaz">GAZ|Gas</string>

    <!--report-->
    <string name="description_date_in_toolbar_from">from</string>
    <string name="description_date_in_toolbar_to">to</string>


    <string name="title_activity_report">Reports</string>
    <string name="report_tab_text_1">Refueling</string>
    <string name="report_tab_text_2">Parking</string>
    <string name="report_tab_text_3">Service</string>
    <string name="report_refueling_total_distance">Total distance</string>
    <string name="report_refueling_total_fuel">Total fuel</string>
    <string name="report_refueling_total_cost">Total cost</string>
    <string name="report_refueling_total_refueling">Total refueling</string>
    <string name="report_refueling_average_fuel_rate">Average fuel rate</string>
    <string name="report_refueling_average_fuel_price">Average fuel price</string>

    <!--textFormatter-->
    <string name="formatter_cost">%,.0f ₴</string>
    <string name="formatter_price_unit">%,.2f ₴/L</string>
    <string name="formatter_volume">%,.1f L</string>
    <string name="formatter_odometer">%,d km</string>
    <string name="formatter_fuel_rate">%,.1f L/100km</string>
    <string name="formatter_percent">%,.0f %%</string>
    <string name="formatter_price_distance">%,.2f ₴/km</string>

</resources>
