<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vehicle"
            android:icon="@drawable/ic_car_front_24"
            android:title="@string/nav_action_vehicles" />
        <item
            android:id="@+id/nav_refueling"
            android:icon="@drawable/ic_fuel_station_24"
            android:title="@string/nav_action_refueling" />
        <item
            android:id="@+id/nav_fuel_price"
            android:icon="@drawable/ic_fuel_price_24"
            android:title="@string/nav_action_fuel_price" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
